--- a/index.html
+++ b/index.html
@@ -59,14 +59,27 @@
         <div class="container">
             <div class="row">
                 <div class="col-lg-7 mx-auto text-center pb-5">
-                    <h1 class="display-4 text-white fw-2 py-5">Build robust landing pages now</h1>
-                    <p class="text-white my-3 py-5">Lorem ipsum dolor sit amet, consectetur adipisicing elit. Eaque quia
+                    <h1 class="display-4 text-white fw-2 pt-5">Build robust landing pages now</h1>
+                    <p class="text-white my-5">Lorem ipsum dolor sit amet, consectetur adipisicing elit. Eaque quia
                         sequi eius. Quas, totam aliquid. Repudiandae reiciendis vel excepturi ipsa voluptate dicta!</p>
-                    <a href="#" class="btn me-2 btn-primary">Get Started</a>
+                    <a href="#" class="btn  me-2 btn-primary">Get Started</a>
                     <a href="#" class="btn btn-outline-light ">My Portfolio</a>
                 </div>
             </div>
         </div>
+    </section>
+    <!-- 333333333 -->
+    <section>
+      <div class="container">
+         <div class="row">
+          <div class="col-12 text-center">
+            <h6 class="text-primary py-3 text1">SERIVCES</h6>
+            <h1 class="text-dark text2">Our Services</h1>
+            <p>Lorem ipsum dolor sit amet consectetur nisi necessitatibus repellat distinctio eveniet <br> eaque fuga
+                in cumque optio consectetur harum vitae debitis sapiente praesentium <br> aperiam aut</p>
+          </div>
+         </div>
+      </div>
     </section>
     
 
