--- a/index.html
+++ b/index.html
@@ -10,6 +10,7 @@
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-9ndCyUaIbzAi2FUVXJi0CjmCapSmO7SnpJef0486qhLnuZ2cdeRhO02iuK6FUUVM" crossorigin="anonymous">
      
     <!-- icon link -->
+    <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.10.5/font/bootstrap-icons.css">
 </head>
 <body>
 
@@ -77,6 +78,35 @@
             <h1 class="text-dark text2">Our Services</h1>
             <p>Lorem ipsum dolor sit amet consectetur nisi necessitatibus repellat distinctio eveniet <br> eaque fuga
                 in cumque optio consectetur harum vitae debitis sapiente praesentium <br> aperiam aut</p>
+          </div>
+         </div>
+         <div class="row py-3">
+          <div class="col-4">
+            <div class="card" >
+              <i class="bi bi-briefcase-fill icon-1"></i>
+              <div class="card-body">
+                <h2>Service-1</h2>
+                <p class="card-text">Some quick example text to build on the card title and make up the bulk of the card's content.</p>
+              </div>
+            </div>
+          </div>
+          <div class="col-4">
+            <div class="card ">
+              <i class="bi bi-chat-right-dots-fill icon-1"></i>
+              <div class="card-body">
+                <h2>Service-2</h2>
+                <p class="card-text">Some quick example text to build on the card title and make up the bulk of the card's content.</p>
+              </div>
+            </div>
+          </div>
+          <div class="col-4">
+            <div class="card" >
+              <i class="bi bi-envelope-at-fill icon-1"></i>
+              <div class="card-body">
+                <h2>Service-3</h2>
+                <p class="card-text">Some quick example text to build on the card title and make up the bulk of the card's content.</p>
+              </div>
+            </div>
           </div>
          </div>
       </div>
